# neuroSMM

./: .gitignore  README.md  README.txt  README_MINIAPP.txt  actions.py  ai_client.py  alembic.ini  app.py  config.py  content.py  db.py  handlers_admin.py  handlers_private.py  image_search.py  miniapp_server.py  news_service.py  pyproject.toml  requirements.txt  safe_send.py  scheduler_service.py  ui_texts.py
alembic/: env.py
alembic/versions/: fc375c3a77db_initial_tables_users_projects_drafts_.py
app/api/: app.py  error_handlers.py
app/bot/: app.py  keyboards.py
app/core/: __init__.py  config.py  constants.py  exceptions.py  logging.py
app/domain/: __init__.py  draft.py  enums.py  generation.py  project.py  schedule.py  user.py
app/publishing/: __init__.py  provider.py  telegram.py
app/scheduler/: __init__.py  runner.py
app/services/: channel_binding.py  draft.py  generation.py  image_generation.py  preview.py  project.py  publish.py  schedule.py
docs/: architecture_note.md  deferred_pr4.py  pr_plan.md  rewrite_rules.md  rewrite_spec.md
miniapp/: api.js  app.js  index.html  main.js  style.css  styles.css
tests/: conftest.py  test_skeleton.py
tests/api/: conftest.py  test_auth.py  test_channel_status.py  test_drafts.py  test_e2e_smoke.py  test_error_sanitization.py  test_generation.py  test_health.py  test_image_generation.py  test_miniapp.py  test_projects.py  test_publishing.py  test_scheduling.py  test_telegram_auth.py
tests/bot/: conftest.py  test_bot_app.py  test_handlers.py  test_keyboards.py
tests/core/: test_config.py  test_constants.py  (+2 more)
(+90 files in other folders)
